try to fix min height problem on IOS devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,11 +47,11 @@
 }
 
 html {
-    min-height: 100%;
+    height: 100%;
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100svh;
     text-rendering: optimizeLegibility;
 }
 
